force-app/main/default/objects/Territory_Budget_SK__c/Territory_Budget_SK__c.object-meta.xml
<CustomObject>
    <label>Territory Budget SK</label>
    <nameField>
        <displayFormat>TB-{0000}</displayFormat>
        <label>TB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Budget SK</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>