force-app/main/default/objects/Territory_Budget_SK__c/fields/Allied_Products__c.field-meta.xml
<CustomField>
    <fullName>Allied_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allied Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>