force-app/main/default/objects/Territory_Budget_SK__c/fields/Allied_Products_Changes__c.field-meta.xml
<CustomField>
    <fullName>Allied_Products_Changes__c</fullName>
    <label>Allied Products Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>