force-app/main/default/objects/Territory_Budget_SK__c/fields/Allied_Products_Total__c.field-meta.xml
<CustomField>
    <fullName>Allied_Products_Total__c</fullName>
    <formula>Allied_Products__c + Allied_Products_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allied Products Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>