force-app/main/default/objects/Territory_Budget_SK__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Internal Comments</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>