force-app/main/default/objects/Territory_Budget_SK__c/fields/CWS__c.field-meta.xml
<CustomField>
    <fullName>CWS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CWS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>