force-app/main/default/objects/Territory_Budget_SK__c/fields/CWS_Total__c.field-meta.xml
<CustomField>
    <fullName>CWS_Total__c</fullName>
    <formula>CWS__c +  CWS_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CWS Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>