force-app/main/default/objects/Territory_Budget_SK__c/fields/is_complete__c.field-meta.xml
<CustomField>
    <fullName>is_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is complete</label>
    <type>Checkbox</type>
</CustomField>