force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Bulk_Total__c.field-meta.xml
<CustomField>
    <fullName>Lube_Bulk_Total__c</fullName>
    <formula>Lube_Bulk__c +  Lube_Bulk_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Bulk Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>