force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Drum__c.field-meta.xml
<CustomField>
    <fullName>Lube_Drum__c</fullName>
    <label>Lube Drum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>