force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Drum_Total__c.field-meta.xml
<CustomField>
    <fullName>Lube_Drum_Total__c</fullName>
    <formula>Lube_Drum__c +  Lube_Drum_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Drum Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>