force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Packaged__c.field-meta.xml
<CustomField>
    <fullName>Lube_Packaged__c</fullName>
    <label>Lube Packaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>