force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Packaged_Changes__c.field-meta.xml
<CustomField>
    <fullName>Lube_Packaged_Changes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lube Packaged Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>