force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Packaged_Total__c.field-meta.xml
<CustomField>
    <fullName>Lube_Packaged_Total__c</fullName>
    <formula>Lube_Packaged__c + Lube_Packaged_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Packaged Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>