force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Total__c.field-meta.xml
<CustomField>
    <fullName>Lube_Total__c</fullName>
    <formula>Lube_Bulk_Total__c +  Lube_Drum_Total__c +  Lube_Packaged_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>