force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Total_Changes__c.field-meta.xml
<CustomField>
    <fullName>Lube_Total_Changes__c</fullName>
    <formula>Lube_Bulk_Changes__c +  Lube_Drum_Changes__c +  Lube_Packaged_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Total Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>