force-app/main/default/objects/Territory_Budget_SK__c/fields/Lube_Total_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Lube_Total_Loaded__c</fullName>
    <formula>Lube_Bulk__c +  Lube_Drum__c  +  Lube_Packaged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lube Total Loaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>