force-app/main/default/objects/Territory_Budget_SK__c/fields/My_Teams_Territories__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_Territories__c</fullName>
    <formula>IF( 
or( 
 Territory__r.Territory_OwnerID__c = $User.Id 
,Territory__r.Sales_Manager__c = $User.Id 
,Territory__r.Sales_Director__c = $User.Id 
,Territory__r.Operations_VP__c = $User.Id 
,Territory__r.Sales_EVP__c = $User.Id 
,Territory__r.temp_Territory_Alignment_Oversite__c = $User.Id 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) 
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Teams Territories</label>
    <type>Checkbox</type>
</CustomField>