force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Changed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Oil_Changed_Flag__c</fullName>
    <formula>or( Oil_Gallon_Changes__c &lt;&gt; 0,  Oil_Liter_Changes__c  &lt;&gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oil Changed Flag</label>
    <type>Checkbox</type>
</CustomField>