force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Filters__c.field-meta.xml
<CustomField>
    <fullName>Oil_Filters__c</fullName>
    <label>Oil Filters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>