force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Filters_Total__c.field-meta.xml
<CustomField>
    <fullName>Oil_Filters_Total__c</fullName>
    <formula>Oil_Filters__c +  Oil_Filters_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oil Filters Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>