force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Gallon_Changes__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gallon_Changes__c</fullName>
    <label>Oil Gallon Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>