force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Gallon_Total__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gallon_Total__c</fullName>
    <formula>Oil_Gallons_less_key_plus_exceptions__c + Oil_Gallon_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oil Gallon Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>