force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gallons__c</fullName>
    <label>Oil Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>