force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Gallons_Changed__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gallons_Changed__c</fullName>
    <formula>Oil_Gallons_less_key_plus_exceptions__c -  Oil_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oil Gallons Changed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>