force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Gallons_less_key_plus_exceptions__c.field-meta.xml
<CustomField>
    <fullName>Oil_Gallons_less_key_plus_exceptions__c</fullName>
    <label>Oil Gallons (less key plus exceptions)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>