force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Liter_Changes__c.field-meta.xml
<CustomField>
    <fullName>Oil_Liter_Changes__c</fullName>
    <label>Oil Liter Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>