force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Liter_Total__c.field-meta.xml
<CustomField>
    <fullName>Oil_Liter_Total__c</fullName>
    <formula>Oil_Liters_less_key_plus_exceptions__c + Oil_Liter_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oil Liter Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>