force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Liters__c.field-meta.xml
<CustomField>
    <fullName>Oil_Liters__c</fullName>
    <label>Oil Liters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>