force-app/main/default/objects/Territory_Budget_SK__c/fields/Oil_Liters_no_exclusions__c.field-meta.xml
<CustomField>
    <fullName>Oil_Liters_no_exclusions__c</fullName>
    <label>Oil Liters (no exclusions)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>