force-app/main/default/objects/Territory_Budget_SK__c/fields/Oily_Water__c.field-meta.xml
<CustomField>
    <fullName>Oily_Water__c</fullName>
    <label>Oily Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>