force-app/main/default/objects/Territory_Budget_SK__c/fields/Oily_Water_Total__c.field-meta.xml
<CustomField>
    <fullName>Oily_Water_Total__c</fullName>
    <formula>Oily_Water__c +  Oily_Water_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oily Water Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>