force-app/main/default/objects/Territory_Budget_SK__c/fields/Part_Washers__c.field-meta.xml
<CustomField>
    <fullName>Part_Washers__c</fullName>
    <label>Part Washers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>