force-app/main/default/objects/Territory_Budget_SK__c/fields/Part_Washers_Changes__c.field-meta.xml
<CustomField>
    <fullName>Part_Washers_Changes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Part Washers Changes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>