force-app/main/default/objects/Territory_Budget_SK__c/fields/Part_Washers_Total__c.field-meta.xml
<CustomField>
    <fullName>Part_Washers_Total__c</fullName>
    <formula>Part_Washers__c +  Part_Washers_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Washers Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>