force-app/main/default/objects/Territory_Budget_SK__c/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <formula>Territory__r.Sales_Director__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>