force-app/main/default/objects/Territory_Budget_SK__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>Territory__r.Sales_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>