force-app/main/default/objects/Territory_Budget_SK__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Budget SK</relationshipLabel>
    <relationshipName>Territory_Budget_SK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>