force-app/main/default/objects/Territory_Budget_SK__c/fields/Territory_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Branch_Code__c</fullName>
    <formula>Territory__r.Primary_Branch__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Branch Code</label>
    <type>Text</type>
</CustomField>