force-app/main/default/objects/Territory_Budget_SK__c/fields/Territory_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Branch_Name__c</fullName>
    <formula>Territory__r.Primary_Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Branch Name</label>
    <type>Text</type>
</CustomField>