force-app/main/default/objects/Territory_Budget_SK__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <formula>Territory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Code</label>
    <type>Text</type>
</CustomField>