force-app/main/default/objects/Territory_Budget_SK__c/fields/Total_ES_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_ES_Budget__c</fullName>
    <formula>CWS__c +  CWS_Changes__c + Allied_Products__c + Allied_Products_Changes__c + Oily_Water__c + Oily_Water_Changes__c + Part_Washers__c + Part_Washers_Changes__c + Vac__c + Vac_Changes__c + Oil_Filters__c + Oil_Filters_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ES Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>