force-app/main/default/objects/Territory_Budget_SK__c/fields/Total_ES_Budget_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Total_ES_Budget_Loaded__c</fullName>
    <formula>CWS__c + Allied_Products__c + Oily_Water__c + Part_Washers__c + Vac__c + Oil_Filters__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total ES Budget Loaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>