force-app/main/default/objects/Territory_Budget_SK__c/fields/TPM__c.field-meta.xml
<CustomField>
    <fullName>TPM__c</fullName>
    <label>TPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>