force-app/main/default/objects/Territory_Budget_SK__c/fields/TPM_Total__c.field-meta.xml
<CustomField>
    <fullName>TPM_Total__c</fullName>
    <formula>TPM__c +  TPM_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPM Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>