force-app/main/default/objects/Territory_Budget_SK__c/fields/Vac__c.field-meta.xml
<CustomField>
    <fullName>Vac__c</fullName>
    <label>Vac</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>