force-app/main/default/objects/Territory_Budget_SK__c/fields/Vac_Total__c.field-meta.xml
<CustomField>
    <fullName>Vac_Total__c</fullName>
    <formula>Vac__c  +  Vac_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vac Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>